# SuitProgram

./: .gitignore  CMakeLists.txt  extract_sprite.py  partitions.csv  procedure.txt  readme.txt  sdkconfig  sdkconfig (copy)  sdkconfig.old  transfer.sh
components/audio/: CMakeLists.txt  audio.c  audio_wav.c
components/audio_capture/: audio_capture.c
components/audio_player/: CMakeLists.txt  audio_player.c
components/audio_rx/: CMakeLists.txt  audio_rx.c
components/audio_rx/include/: audio_rx.h
components/bad_apple/: CMakeLists.txt  bad_apple.c
components/bt_audio/: CMakeLists.txt  bt_audio.c  bt_audio_app.c  bt_audio_internal.h  bt_audio_shell.c  bt_audio_stream_file.c
components/bt_audio/include/: bt_audio.h  bt_audio_app.h  bt_audio_shell.h
components/calculator/: CMakeLists.txt  calculator.c
components/call/: CMakeLists.txt  call.c
components/comms/: CMakeLists.txt  comms.c
components/fft/: CMakeLists.txt  fft.c  fft_internal.h  fft_render.c  fft_render.h  oldfft.c  temp.c
components/flappy/: CMakeLists.txt  flappy.c
components/fluid/: CMakeLists.txt  fluid.c
components/gps/: CMakeLists.txt  gps.c
components/hw/: CMakeLists.txt  hw.c
components/input/: CMakeLists.txt  input.c
components/keyboard/: CMakeLists.txt  keyboard.c
components/led/: CMakeLists.txt  led.c
components/led2/: led2.c
components/led_layout/: CMakeLists.txt  led_layout.c
components/led_modes/: CMakeLists.txt  led_modes.c
components/link/: CMakeLists.txt  link.c
components/logo/: CMakeLists.txt  logo.c
components/microphone/: CMakeLists.txt  microphone.c
components/mpu6500/: CMakeLists.txt  mpu6500.c
components/oled/: CMakeLists.txt  oled.c
components/orientation/: CMakeLists.txt  orientation.c  orientation_service.c
components/pong/: CMakeLists.txt  pong.c
components/power/: CMakeLists.txt  power.c
components/scores/: CMakeLists.txt  scores.c
components/snake/: CMakeLists.txt  snake.c
components/state/: CMakeLists.txt  state.c
components/stick/: CMakeLists.txt  stick.c
components/storage_sd/: CMakeLists.txt  storage_sd.c
components/telemetry/: CMakeLists.txt  telemetry.c
components/tetris/: CMakeLists.txt  tetris.c
components/threedee/: CMakeLists.txt  threedee.c
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  app_adc_debug.c  app_bad_apple.c  app_bt.c  app_calculator.c  app_fft.c  app_fft_sync.c  app_file_rx.c  app_flappy.c  app_fluid.c  app_keyboard.c  app_keyboard.h  app_led_color.c  app_led_layout.c  app_led_support.c  app_led_support.h  app_leds.c  app_main.c  app_manual_bpm.c  app_master_control.c  app_menu.c  app_message.c  app_music.c  app_pong.c  app_preferences.c  app_service_restart.c  app_settings.c  app_settings.h  app_shell.c  app_shell.h  app_snake.c  app_status.c  app_stickman.c  app_t2048.c  app_tetris.c  app_threedee.c  app_volume.c  old.c  (+9 more)
tools/: generate_layout_sd.py  layout_model.py  render_front_layout.py
(+44 files in other folders)
